--- a/DATEV/datev_exclusions.yaml
+++ b/DATEV/datev_exclusions.yaml
@@ -1,3 +1,24 @@
-files:
+extensions:
+  - '.LOG'
+  - '.MDF'
+  - '.MEM'
+  - '.NDF'
+  - '.NVR'
+  - '.SQU'
+  - '.STM'
+  - '.VHD'
+  - '.VHDX'
+  - '.VMC'
+  - '.VMD'
+  - '.VMS'
+  - '.VMX'
+  - '.BTV'
+  - '.DB'
+  - '.DBX'
+  - '.EDB'
+  - '.IDX'
+  - '.INI'
+  - '.LDF'  
+  - '.MDB'
 processes:
 folders:
