--- a/DATEV/datev_exclusions.yaml
+++ b/DATEV/datev_exclusions.yaml
@@ -7,7 +7,9 @@ extensions:
   - '.SQU'
   - '.STM'
   - '.VHD'
+  # Need to check if the content of the files are been scaned when mounted
   - '.VHDX'
+  # Need to check if the content of the files are been scaned when mounted
   - '.VMC'
   - '.VMD'
   - '.VMS'
