Changed DATEV Exclusions

--- a/DATEV/datev_exclusions.yaml
+++ b/DATEV/datev_exclusions.yaml
@@ -1,26 +1,36 @@
 extensions:
-  - '.LOG'
+  - '.DBX'
+  - '.EDB'
+  - '.IDX'
+  - '.INI'
   - '.MDF'
+  - '.LDF'
+  - '.BAK'
+  - '.LOG'
   - '.MEM'
   - '.NDF'
   - '.NVR'
   - '.SQU'
   - '.STM'
+  - '.SIK'
   - '.VHD'
-  # Need to check if the content of the files are been scaned when mounted
-  - '.VHDX'
-  # Need to check if the content of the files are been scaned when mounted
   - '.VMC'
   - '.VMD'
   - '.VMS'
   - '.VMX'
-  - '.BTV'
-  - '.DB'
-  - '.DBX'
-  - '.EDB'
-  - '.IDX'
-  - '.INI'
-  - '.LDF'  
+  - '.SRVTECU'
+  - '.SRVTECS'
+  - '.SRVTEVT'
+  - '.SRVTCHK'
+  - '.SRVTOPS'
+  - '.SRVTSCE'
+  - '.SRVTSER'
+  - '.SRVTHRW'
+  - '.SRVTETB'
+  - '.SRVTCRT'
+  - '.SRVTSCC'
+  - '.SRVTCHR'
+  - '.SRVTIDX'
   - '.MDB'
 processes:
 folders:
