Update Datev Exclusions

--- a/DATEV/datev_exclusions.yaml
+++ b/DATEV/datev_exclusions.yaml
@@ -13,24 +13,15 @@ extensions:
   - '.SQU'
   - '.STM'
   - '.SIK'
-  - '.VHD'
   - '.VMC'
   - '.VMD'
   - '.VMS'
-  - '.VMX'
-  - '.SRVTECU'
-  - '.SRVTECS'
-  - '.SRVTEVT'
-  - '.SRVTCHK'
-  - '.SRVTOPS'
-  - '.SRVTSCE'
-  - '.SRVTSER'
-  - '.SRVTHRW'
-  - '.SRVTETB'
-  - '.SRVTCRT'
-  - '.SRVTSCC'
-  - '.SRVTCHR'
-  - '.SRVTIDX'
   - '.MDB'
 processes:
+  - '%DATEVPP%\PROGRAMM\K0005000\Arbeitsplatz.exe'
+  - '%DATEVPP%\PROGRAMM\RWAPPLIC\irw.exe'
+  - '%DATEVPP%\PROGRAMM\B0000522\logfilter.exe'
 folders:
+  - '%DATEVPP%\PROGRAMM\K0005000\Arbeitsplatz.exe'
+  - '%DATEVPP%\PROGRAMM\RWAPPLIC\irw.exe'
+  - '%DATEVPP%\PROGRAMM\B0000522\logfilter.exe'
